syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mental.buddy.grpc";
option java_outer_classname = "HelloServiceProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
